apps/base/ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ghost
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
  revisionHistoryLimit: 4
  progressDeadlineSeconds: 600
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghost
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: ghost-content
          persistentVolumeClaim:
            claimName: ghost-content
        - name: ghost-config
          secret:
            secretName: ghost-config
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi

      containers:
        - name: ghost
          image: ghcr.io/sredevopsorg/ghost-on-kubernetes:main@sha256:099616060bc227e98ef95c4d63f842c6fa547ce4cb0a223b3229ab0629a9df8a
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 2368
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ghost/api/v4/admin/site/
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /ghost/api/v4/admin/site/
              port: http
            periodSeconds: 300
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 1
            initialDelaySeconds: 30
          resources:
            limits:
              cpu: 800m
              memory: 800Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: ghost-content
              mountPath: /home/nonroot/app/ghost/content
              readOnly: false
            - name: ghost-config
              readOnly: true
              mountPath: /home/nonroot/app/ghost/config.production.json
              subPath: config.production.json
            - name: tmp
              mountPath: /tmp
              readOnly: false
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 65532
      restartPolicy: Always
      terminationGracePeriodSeconds: 15
      dnsPolicy: ClusterFirst
      securityContext: {}
