apps/base/ghost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  ports:
    - port: 2368
      protocol: TCP
      targetPort: http
      name: http
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ghost
