apps/base/ghost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghost
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Ghost CMS
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: ghost.png
    gethomepage.dev/name: Ghost
    gethomepage.dev/statusStyle: dot
  namespace: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  parentRefs:
    - name: gateway
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: ghost
          port: 2368
