apps/base/ghost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
  namespace: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  rules:
    - host: "ghost.localhost"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  number: 2368
